[project]
name = "bda-resume-parser"
version = "0.1.0"
description = "Amazon Bedrock Data Automation resume parser with custom blueprints"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]
keywords = ["aws", "bedrock", "resume", "parser", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
bda-parser = "main:main"

[project.urls]
Homepage = "https://github.com/windson/bda-usecases"
Repository = "https://github.com/windson/bda-usecases"
Issues = "https://github.com/windson/bda-usecases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bda_parser"]